<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input1"/>
    <EditText
        android:id="@+id/billedAmount"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:hint="@string/hint1"
        android:inputType="numberDecimal"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input2"/>

    <EditText
        android:id="@+id/PeoplePaying"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:hint="@string/hint2"
        android:inputType="number"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
    <ToggleButton
        android:id="@+id/serviceChargeCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/NoFreeDiscount"
        android:textOff="@string/FreeDiscount"
        android:layout_marginTop="16dp"/>
    <ToggleButton
        android:id="@+id/GSTCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/AdditionalTax"
        android:textOff="@string/NoAdditionalTax"
        android:layout_marginTop="16dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input3"/>

    <EditText
        android:id="@+id/discount"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:hint="@string/hint3"
        android:inputType="number"
        />


        <RadioGroup
            android:id="@+id/RadioGroupPaymentMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <RadioButton
                android:id="@+id/radioButtonPaymentCash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PaymentMethodAa" />

            <RadioButton
                android:id="@+id/radioButtonPaymentPayNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PaymentMethodBa" />
        </RadioGroup>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/SplitButtonEnabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#4CAF50"
            android:text="@string/SplitEnable" />

        <Button
            android:id="@+id/ResetButtonEnabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#F44336"
            android:text="@string/ResetEnable" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/totalbill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ValueToPay" />

        <TextView
            android:id="@+id/totalbillamount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/eachpersonpay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SplitValueToPay" />

        <TextView
            android:id="@+id/eachpersonpayamount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

</LinearLayout>